remove localhost bypass for API checks